# mango

./: .gitignore  .gitmodules  Justfile  LICENSE  README.md  build  design.md  package-lock.json  package.json  sample.sql  services.md  test.sh  test.sqlite
app/: .gitignore  Justfile  README.md  android  components.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  splashscreen.html  tsconfig.app.json  tsconfig.node.json  (+1 more)
app/src-tauri/: .gitattributes  .gitignore  Cargo.toml  lib copy.rs  tauri.conf.json  test.db
app/src-tauri/bindings/: AppPersonalization.ts  AppSettings.ts  AudioBook.ts  AudioLibrary.ts  AudioSynthesisEvent.ts  CachedUser.ts  CreateCachedUser.ts  CurrentAudioMetadata.ts  Events.ts  History.ts  Playlist.ts  Theme.ts  cachedUser.d.ts  createCachedUSer.d.ts
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 20250812181420_create_default_tables.sql  20250812181622_add_timestanp_to_playlist.sql  20250812181730_change_is_loved_to_boolean.sql  20250812181908_create_app_settings_table.sql  20250812181958_create_app_personalization_table_table.sql  20250812182051_create_cached_user_table.sql  20250812182303_remove_user_from_app_personalization.sql  20250812182430_create_app_settings_if_not_exist.sql  20250816090328_add_user_identifier_to_cached_user_data.sql  20250816093517_remove_user_identifier_to_cached_user_data.sql
app/src-tauri/resources/: en_US-libritts_r-medium.onnx.json
app/src-tauri/sidecar/lame/lib/: libmp3lame.la
app/src-tauri/src/: adapters.rs  commands.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  migrations.rs  state.rs  utils.rs
app/src-tauri/src/adapters/: cached_user.rs  events.rs  mod.rs  theme.rs
app/src-tauri/src/commands/: app_internal.rs  app_personalization.rs  app_settings.rs  cached_user.rs  mod.rs
app/src-tauri/src/models/: app_personaliation.rs  app_settings.rs  cached_user.rs  mod.rs
libaudify/: .gitignore  Cargo.toml  Justfile  README.md
libaudify/examples/: audio.rs
libaudify/src/: core.rs  error.rs  extractor.rs
server/: .dockerignore  .env.example  .envrc  .gitignore  .gitmodules  Cargo.toml  docker-compose.yaml  sandbox.sql
server/bindings/: PartialUserProfile.ts  UserInformation.ts  createUserRequest.d.ts  forgottenPasswordRequest.d.ts  notification.d.ts  user.d.ts
server/crates/aers_audify/: .gitignore  Cargo.toml
server/crates/aers_audify/src/: core.rs  error.rs  extractor.rs  languages.rs  lib.rs  main.rs  t.js
server/crates/aers_email_client/: Cargo.toml
server/crates/aers_email_client/src/: confirm_email.rs  email.rs  email_client.rs  errors.rs  forgotten_password.rs  lib.rs  password_updated.rs  welcome.rs
server/crates/aers_email_client/templates/: base-s.html  base.html  base.mjml  confirm-email.html  confirm_email.html  forgotten_password.html  inlined.confirm-email.html  password_updated.html  welcome.html
server/crates/aers_imagekit_client/: Cargo.toml
server/crates/aers_imagekit_client/src/: client.rs  core.rs  error.rs  lib.rs  main.rs
server/crates/aers_sharepoint/: Cargo.toml
server/crates/aers_utils/: Cargo.toml
server/crates/aers_utils/src/: errors.rs  extract_env.rs  generate.rs  lib.rs
server/crates/aers_wav_mp3_converter/: Cargo.toml
server/crates/aers_wav_mp3_converter/src/: error.rs  lib.rs  main.rs  test.rs  wav_converter.rs  wav_converter_test.rs
server/docker/dev/: Dockerfile
server/docker/prod/: Dockerfile
server/migrations/: 20250705200147_create-library.sql  20250705203826_create_playlist.sql  20250705204056_update_albulm_table.sql  20250705204056_update_audio_book_table.sql  20250713195059_add_playlist_identifier_to_audio_books.sql  20250718221741_add_user_identifier_to_playlist_table.sql  20250718223203_rename_playlist.about_to_description.sql  20250718224448_rename_table_->_playlist_playlists.sql  20250718224448_rename_table_playlist_playlists.sql  20250803183520_create_OTP_table.sql  20250803193700_rename_one_time_passwords.otp_->_code.sql  20250803194139_rename_one_time_password_.sql  20250806155111_update(ER):_add_on_dele_specifier_to_user_and_on_time_password.sql  20250814200045_create_profile_picture_column.sql  20250815092857_create_nitification_table.sql  20250829001818_add_usernae_to_user_data.sql
server/src/: lib.rs  main.rs
server/src/adapters/: api_request.rs  api_response.rs  audio_books.rs  authentication.rs  file.rs  jwt.rs  mod.rs  notification.rs  pagination.rs  playlist.rs  profile.rs  repository.rs  users.rs
server/src/config/: app.rs  config.rs  database.rs  filesystem.rs  logger.rs  mod.rs  tasks.rs
server/src/entities/: audio_book.rs  common.rs  mod.rs  notifications.rs  otp.rs  playlist.rs  user.rs
server/src/errors/: app_error.rs  auth_error.rs  auth_service_error.rs  common_service_error.rs  mod.rs  repository_error.rs  service_error.rs  user_service_error.rs
server/src/events/: channels.rs  consumers.rs  message.rs  mod.rs  producer.rs  producers.rs  redis.rs  subscriber.rs  websocket.rs  worker.rs
server/src/handlers/: audio_books_handlers.rs  auth.rs  authentication_handlers.rs  mod.rs  notification_handlers.rs  playlist_handlers.rs  playlist_hnadlers.rs  root.rs  root_handlers.rs  user.rs  users_handlers.rs
server/src/middlewares/: authenticated_request.rs  authentication_middleware.rs  mod.rs  validator.rs
server/src/repositories/: audio_book_repository.rs  mod.rs  notification_repository.rs  otp_repository.rs  playlist_repository.rs  sandbox.sql  user_repository.rs
server/src/routes/: app_router.rs  audio_books_router.rs  auth.rs  authentication_router.rs  mod.rs  notification_routers.rs  playlist_router.rs  public.rs  public_router.rs  router.rs  users.rs  users_router.rs
server/src/services/: audio_book.rs  audio_book_service.rs  auth.rs  authentication_service.rs  helper_service.rs  mod.rs  notification_service.rs  otp_service.rs  playlist.rs  playlist_service.rs  redis_service.rs  user.rs  user_service.rs
server/src/shared/: extract_env.rs
server/src/states/: services_state.rs
server/test/: index.html  script.js
(+225 files in other folders)
