[package]
name = "eckko"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eckko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
rayon = "1.10.0"
rodio = "0.20.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "tls-rustls"] }

tauri = { version = "2", features = ["tracing"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
tauri-plugin-upload = "2"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
ts-rs = "10.1.0"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

