[package]
name = "aers_audify"
description = "convert PDF to audio files"
version = "0.1.0"
edition = "2024"

[dependencies]
piper-rs = "0.1.9"
extractous = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
ort-sys = { version = "=2.0.0-rc.9", default-features = false }
