[package]
name = "aers_imagekit_client"
version = "0.1.0"
edition = "2024"

[dependencies]
aers_utils = { version = "0.1.0", path = "../aers_utils" }
base64 = "0.22.1"
chrono = "0.4.41"
log = "0.4.27"
reqwest = { version = "0.12", features = ["multipart", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror.workspace = true
